# drama-making-agent

./: .env.example  .gitignore  README.md  drama_agent_spec_ko.md  main.py  project_rules.md  pyproject.toml
.github/workflows/: lint.yml
src/: __init__.py  config.py
src/prompts/: frame_generation.prompt
src/prompts/system/: character_agent.prompt  director.prompt  image_specialist.prompt  story_agent_v2.prompt  video_specialist.prompt  visual_style_agent.prompt
src/prompts/user/: character_agent.prompt  director.prompt  image_specialist.prompt  story_agent.prompt  video_specialist.prompt  visual_style_agent.prompt
src/workflows/: __init__.py  graph.py  main.py  nodes.py  tasks.py
